Appendix: Source code and fieldnotes

--- a/Latex/paper.tex
+++ b/Latex/paper.tex
@@ -244,7 +244,7 @@ This paper introduces \Cree, a modern toolbox to design and conduct economic exp
 % Appendix
 \appendix
 
-\section{List of \Cree dependencies}
+\section{\Cree dependencies}
 
 There is a vibrant ecosystem and many general-purpose software libraries that surround the three web technologies HTML, CSS and JavaScript. \Cree exploits this ecosystem and takes full advantage of the software libraries that exist. This provides stability, flexibility, and makes it easy to set up and run economic experiments. This section briefly describes each of the software libraries, which \Cree depends upon.
 
@@ -261,6 +261,10 @@ There is a vibrant ecosystem and many general-purpose software libraries that su
   \item[jQuery:] This library extends JavaScript and provides additional useful functions to manipulate the web pages that subjects see. More specifically it is used to load new pages, and collect inputs from subjects. See \url{https://jquery.com}
   \item[D3.js:] \Cree leverages the JavaScript library \emph{D3.js} to build graphics. \emph{D3.js} is used to build both static graphics and graphical interfaces, which subjects can interact with and provide inputs through. See \url{http://d3js.org}
 \end{description}
+
+\section{Source code}
+
+The source code for \Cree is licensed under the MIT license and available at \url{https://github.com/jsekamane/Cree}. An example experiment of an English auction is available at \url{https://github.com/jsekamane/Cree/tree/master/examples/english-auction}. Fieldnotes for this paper is available at \url{https://github.com/jsekamane/Cree-Paper}.
 
 \newpage
 
