Appendix: Clarified node.js

--- a/Latex/paper.tex
+++ b/Latex/paper.tex
@@ -45,7 +45,7 @@ The great merit of \Cree is the very few restrictions it places on the equipment
 
 \Cree is build using web technologies. Content is structured using the markup language \emph{HTML}. The layout and presentation across different screen sizes is archived with the style sheet language \emph{CSS}. And all logic is constructed using the programming language \emph{JavaScript}. All web browsers interpret these three cornerstone languages and render pages accordingly. Subjects participate in \Cree experiments through a web browser. Because \Cree is fundamentally native to the web browser, it avoids many of the restrictions that other toolboxes suffer from.
 
-In addition there is a vibrant ecosystem surrounding these web technologies. \Cree exploits this ecosystem and takes full advantage of the software libraries that exist. This provides stability, flexibility, and makes it easy to set up and run economic experiments. Fore instances, \Cree uses the software library \emph{Node.js} to run the server and handle networking issues. The asynchronous architecture of \emph{Node.js} gives \Cree the flexibility to handle real-time events, which many other toolboxes is not capable of. With this flexibility \Cree can run everything, from simple dictator game experiments, to highly sophisticated auction experiments. \Cree is a framework that provides the tools to handle many of the otherwise mundane, complicated or manually tasks required to set up and run economic experiments.
+In addition there is a vibrant ecosystem surrounding these web technologies. \Cree exploits this ecosystem and takes full advantage of the software libraries that exist. \ref{S:dependencies} lists all software libraries used by \Cree and gives a short description of each. Building on top of existing technologies provides stability, flexibility, and makes it easy to set up and run economic experiments. Fore instances, \Cree uses the software library \emph{Node.js} to run the server and handle networking issues. The asynchronous architecture of \emph{Node.js} gives \Cree the flexibility to handle real-time events, which many other toolboxes are not capable of. With this flexibility \Cree can run everything, from simple dictator game experiments, to highly sophisticated auction experiments. \Cree is a framework that provides the tools to handle many of the otherwise mundane, complicated or manually tasks required to set up and run economic experiments.
 
 Technological advances opens up a new path, however the path is not without obstacles. This paper explores and discusses how to handle these obstacles. Some obstacles are alleviated through appropriate technical design of the toolbox. Other obstacles requires actions taken by the researcher.
 
@@ -245,11 +245,12 @@ This paper introduces \Cree, a modern toolbox to design and conduct economic exp
 \appendix
 
 \section{\Cree dependencies}
+\label{S:dependencies}
 
 There is a vibrant ecosystem and many general-purpose software libraries that surround the three web technologies HTML, CSS and JavaScript. \Cree exploits this ecosystem and takes full advantage of the software libraries that exist. This provides stability, flexibility, and makes it easy to set up and run economic experiments. This section briefly describes each of the software libraries, which \Cree depends upon.
 
 \begin{description}
-  \item[Node.js:] \Cree uses the software library \emph{Node.js} to run the server and control the experiment. \emph{Node.js} is build on Chrome's JavaScript engine and can thus run JavaScript on the server. Ie. \Cree uses the programming language JavaScript to introduce logic, both at the server level, and at the web browser level. The asynchronous architecture of \emph{Node.js} gives \Cree the flexibility to handle real-time events. Node.js is easily installed from \url{http://nodejs.org}, and comes pre bundled with the package manager \emph{npm}.
+  \item[Node.js:] \Cree uses the software library \emph{Node.js} to run the server and control the experiment. \emph{Node.js} is build on the same JavaScript engine as the Chrome browser, but \emph{Node.js} runs JavaScript on the server. This means that \Cree uses the programming language JavaScript to induce logic, both at the server level, and at the web browser level. \emph{Node.js} has a asynchronous architecture -- so instead of executing the code from the top, one line after the other, \emph{Node.js} binds all code to events and the code is only executed once an event happen (eg. when subjects enter the experiment, or when subjects sends messages, etc.). This asynchronous architecture gives \Cree the flexibility to handle real-time events. Node.js is easily installed from \url{http://nodejs.org}, and comes pre bundled with the package manager \emph{npm}.
   \item[cloak:] This \emph{Node.js} module or package aims to provide a network layer to HTML games. \Cree uses \emph{cloak} to handle all networking issues, e.g. connecting subjects, queuing subjects, sending messages back and forth between subjects, etc. See \url{http://incompl.github.io/cloak/}
   \item[knuth-shuffle:] This is the \emph{Node.js} module that \Cree uses to randomise subjects across groups, roles and treatments respectively. The underlying algorithm is known as the \emph{Fisher–Yates shuffle} or the \emph{Knuth shuffle}. And the algorithm is unbiased. See \url{https://github.com/coolaj86/knuth-shuffle}
   \item[connect:] This is the \emph{Node.js} module that \Cree uses to serve web pages to subjects. See \url{https://github.com/senchalabs/connect}
